<resources>
    <string name="app_name">Simulador Plan de Negocios</string>
    <string name="simulador_opciones">Simulador Opciones</string>

    <string name="BotonSiguiente">SIMULACION</string>
    <string name="tv1">Resultado de la Simulación</string>

    <string name="BotonAnterior">Volver</string>
    <string name="tv2">La viabilidad del proyecto es de:</string>
    <string name="tv3">¿El proyecto es atractivo?</string>
    <string name="tv4">Informe detallada de la simulación</string>
    <string name="resultados">VER RESULTADOS</string>

    <string name="via"></string>
    <string name="atrac"></string>
    <string name="carga">Cargando Simulación</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_menu_simulacion2">MenuSimulacion2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>