<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultadosPDF">

    <Button
        android:id="@+id/btnCrearPDF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="51dp"
        android:onClick="pdfGenerado"
        android:text="@string/resultados" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="23dp"
        android:onClick="volver"
        android:text="@string/BotonAnterior" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="230dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="64dp"
        android:layout_marginTop="157dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="344dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="284dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="174dp"
        android:text="@string/tv3"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/atratividad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnCrearPDF"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="71dp"
        android:layout_marginBottom="20dp"
        android:editable="false"
        android:ems="10"
        android:enabled="false"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/atrac"
        android:textAlignment="center"
        android:textSize="24sp"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/viabilidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="63dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="239dp"
        android:editable="false"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/via"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textSize="24sp"
        tools:ignore="SpeakableTextPresentCheck"
        tools:text="@string/via" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="30dp"
        android:text="@string/tv1"
        android:textAlignment="center"
        android:textSize="22sp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="373dp"
        android:layout_marginBottom="307dp"
        android:text="@string/tv2"
        android:textSize="20sp"
        android:visibility="visible" />

</RelativeLayout>

